--- a/login.html
+++ b/login.html
@@ -13,10 +13,8 @@
 		<main class="cardLogin">
 			<img class ="logo"src="Imagens/Logo.png" alt="Logo">
 			<form action="" class="loginFields">
-				<label for="email">E-mail</label>
-				<input type="text" id="cpf" >
-				<label for="senha">Senha</label>
-				<input type="password" id="senha">
+				<input type="text" id="cpf" placeholder="E-mail" >
+				<input type="password" id="senha" placeholder="Senha" >
 				<input class="button" type="submit" value="Login" >
 				
 			<footer class="linksExternos">
