Linkagem entre paginas

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 			<form action="" class="loginFields">
 				<input type="text" id="cpf" placeholder="E-mail" >
 				<input type="password" id="senha" placeholder="Senha" >
-				<input class="button" type="submit" value="Login" >
+				<a href="home.html"><input class="button" type="submit" value="Login" ></a>
 				
 			<footer class="linksExternos">
 				<a href="">Forgot password?</a>
