fix:Rolagem lateral

--- a/login.html
+++ b/login.html
@@ -15,8 +15,7 @@
 			<form action="" class="loginFields">
 				<input type="text" id="cpf" placeholder="E-mail" >
 				<input type="password" id="senha" placeholder="Senha" >
-				<a href="home.html"><input class="button" type="submit" value="Login" ></a>
-				
+				<input class="button" type="submit" value="Login" >
 			<footer class="linksExternos">
 				<a href="">Forgot password?</a>
 				<a href="">Privacy</a>
