--- a/signIn.html
+++ b/signIn.html
@@ -20,9 +20,12 @@
 				<input type="text" id="Nome-Completo" placeholder="Nome Completo" >
 				<input type="text" id="email" placeholder="E-mail" >
 				<input type="password" id="passworsd" placeholder="Senha" >
-				<input class="button" type="submit" value="Login" >
+				<div>
+					 <input class="button" type="submit" value="Sign-in" >
+					<input class="button" type="submit" value="Login-in" >
+				</div>
 			</form>
 		</main>
 	</div>
-</body>
+</body>	
 </html>
