full product screen

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 					<div class="search-container">
 						<form>
 							<div class="input-group">
-								<input type="text" placeholder="Pesquisar...">
+								<input type="text" placeholder="Busque seu material...">
 							</div>
 						</form>
 					</div>
-				</div>
+				</div> 
 				<div class="nav-reight">
 					<a href="#"><img class="nav-icons" src="Imagens/shopping-cart.png" alt="shoppingCart"></a>
-					<a href=""><img class="nav-icons" src="Imagens/profile.png" alt="profile"></a>
+					<a href="signIn.html"><img class="nav-icons" src="Imagens/profile.png" alt="profile"></a>
 				</div>
 			</div>
 			<div class="container-nav">
@@ -61,25 +61,25 @@
 					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
 					<p class="name-produt">Caderno Infantil</p>
 					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
-					<a class="button" href="">Compra</a>
+					<a class="button" href="product.html">Compra</a>
 				</div> 				
 				<div class="card">
 					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
 					<p class="name-produt">Caderno Infantil</p>
 					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
-					<a class="button" href="">Compra</a>
+					<a class="button" href="product.html">Compra</a>
 				</div>
 				<div class="card">
 					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
 					<p class="name-produt">Caderno</p>
 					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
-					<a class="button" href="" >Compra</a>	
+					<a class="button" href="product.html" >Compra</a>	
 				</div> 
 				<div class="card">
 					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
 					<p class="name-produt">Caderno</p>
 					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
-					<a class="button" href="" >Compra</a>	
+					<a class="button" href="product.html" >Compra</a>	
 				</div> 
 			</div>
 		</main> 
