--- a/signIn.html
+++ b/signIn.html
@@ -21,8 +21,8 @@
 				<input type="text" id="email" placeholder="E-mail" >
 				<input type="password" id="passworsd" placeholder="Senha" >
 				<div>
-					 <input class="button" type="submit" value="Sign-in" >
-					<input class="button" type="submit" value="Login-in" >
+					<input class="button" type="submit" value="Sign-in" >
+					<a href="index.html"><input class="button" type="submit" value="Login-in" ></a>
 				</div>
 			</form>
 		</main>
