--- a/product.html
+++ b/product.html
@@ -4,9 +4,145 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="Css/style.css">
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="wallpaper">
+		<header class="header">
+			<div class="nav-main">
+				<div class="nav-left">
+					<a href="#"><img class="nav-icons" src="Imagens/threePoints.ico" alt=""></a>
+					<div class="search-container">
+						<form>
+							<div class="input-group">
+								<input type="text" placeholder="Pesquisar...">
+							</div>
+						</form>
+					</div>
+				</div>
+				<div class="nav-reight">
+					<a href="#"><img class="nav-icons" src="Imagens/shopping-cart.png" alt="shoppingCart"></a>
+					<a href="signIn.html"><img class="nav-icons" src="Imagens/profile.png" alt="profile"></a>
+				</div>
+			</div>
+			<div class="container-nav">
+				<div class="filter-nav">
+					<a href="">Mais Vendidos</a>
+					<a href="">Ofertas do Dia</a>
+					<a href="">Escolas</a>
+					<a href="">Novidades</a>
+					<a href="">Frete Gatris</a>
+				</div>
+			</div>
+		</header>
+
+
+		<main>
+			<div class="root">
+				<div class="product-card">
+					<div class="">
+						<img src="https://images-americanas.b2w.io/produtos/01/00/img/539642441/0/5396424440_2GG.jpg" alt="">
+
+					</div>
+					<div class="descricao-product">
+						<h1 class="basic-Product-information">Smartphone Samsung Galaxy A03 Core 32GB 4G Wi-Fi Tela 6.5'' Dual Chip 2GB RAM Câmera 8MP + Selfie 5MP - Verde</h1>
+						<div class="assessment">
+							<img src="Imagens/star.png" alt="stars1">
+							<img src="Imagens/star.png" alt="stars2">
+							<img src="Imagens/star.png" alt="stars3">
+							<img src="Imagens/star.png" alt="stars4">
+						</div>
+						<div class="more-information">
+							<p>Tenha todos os seus compromissos e aplicativos úteis na palma da sua mão, sem deixar nada para trás com o Galaxy A03 Core da Samsung. Realize fotos especiais e únicas com a câmera traseira de 8MP. Divirta-se e compartilhe seus momen...</p>
+						</div>
+					</div>
+				</div>
+				<div class="payment-card">
+					<h1 class="price">R$ 698,90</h1>
+				
+					<div class="payment-methods">
+						<p><img src="Imagens/credit-card.png" alt="cartao" >até 4x de 174,72</p>
+						<a href="">mais formas de pagamento</a>
+					</div>
+					<div class="freight">
+						<div class="freight-category">
+							<img src="" alt="">
+							<div>
+								<h2>Padrão</h2>
+								<p><strong>rececba em até</strong> 20 junho R$ 10,00</p>
+								<h2>Expresso </h2>
+								<p><strong>rececba em até</strong> 20 junho R$ 30,00</p>
+							</div>
+						</div>
+					</div>
+					<a class ="button" id="button-finaly"  href="">Comprar</a>
+				</div>
+			</div>
+ 
+			<h2 class="title">Outros produtos semelhantes</h2>
+			<div class="product-list">
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno Infantil</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="">Compra</a>
+				</div> 				
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno Infantil</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="">Compra</a>
+				</div>
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="" >Compra</a>	
+				</div> 
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="" >Compra</a>	
+				</div> 
+			</div>
+		</main>
+		<footer class="rodape">
+			<div class="container">
+			  <div class="row">
+				<div class="col-md-4">
+				  <h4>Informações</h4>
+				  <ul>
+					<li><a href="#">Política de privacidade</a></li>
+					<li><a href="#">Termos e condições de uso</a></li>
+					<li><a href="#">Envio e devolução</a></li>
+				  </ul>
+				</div>
+				<div class="col-md-4">
+				  <h4>Contato</h4>
+				  <ul>
+					<li><a href="#">Telefone: (11) 1234-5678</a></li>
+					<li><a href="#">E-mail: contato@materiaisescolares.com.br</a></li>
+					<li><a href="#">Endereço: Rua das Escolas, 123, São Paulo - SP</a></li>
+				  </ul>
+				</div>
+				<div class="col-md-4">
+				  <h4>Redes Sociais</h4>
+				  <ul>
+					<li><a href="#"><i class="fab fa-facebook"></i> Facebook</a></li>
+					<li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+					<li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+				  </ul>
+				</div>
+			  </div>
+			  <div class="row">
+				<div class="col-md-12">
+				  <p>&copy; 2023 Materiais Escolares. Todos os direitos reservados.</p>
+				</div>
+			  </div>
+			</div>
+		  </footer>
+
 </body>
 </html>
