implementação de quantidade de itens

--- a/product.html
+++ b/product.html
@@ -41,8 +41,8 @@
 		<main>
 			<div class="root">
 				<div class="product-card">
-					<div class="">
-						<img src="https://images-americanas.b2w.io/produtos/01/00/img/539642441/0/5396424440_2GG.jpg" alt="">
+					<div class="product-preview">
+						<img src="https://m.media-amazon.com/images/I/61XXfR9v-fL._AC_UL320_.jpg" alt="">
 
 					</div>
 					<div class="descricao-product">
@@ -62,12 +62,11 @@
 					<h1 class="price">R$ 698,90</h1>
 				
 					<div class="payment-methods">
-						<p><img src="Imagens/credit-card.png" alt="cartao" >até 4x de 174,72</p>
+						<p><img class = "icons" src="Imagens/credit-card.png" alt="cartao" >até 4x de 174,72</p>
 						<a href="">mais formas de pagamento</a>
 					</div>
 					<div class="freight">
 						<div class="freight-category">
-							<img src="" alt="">
 							<div>
 								<h2>Padrão</h2>
 								<p><strong>rececba em até</strong> 20 junho R$ 10,00</p>
@@ -75,6 +74,9 @@
 								<p><strong>rececba em até</strong> 20 junho R$ 30,00</p>
 							</div>
 						</div>
+					</div>
+					<div class="amount">
+						<img class = "icons" src="Imagens/add.png" alt="add"><div id="amount-box"> <p>2</p></div><img class = "icons"src="Imagens/minus-sign.png" alt="remove">
 					</div>
 					<a class ="button" id="button-finaly"  href="">Comprar</a>
 				</div>
