refotoração de codigo (box-quantity)

--- a/product.html
+++ b/product.html
@@ -75,8 +75,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="amount">
-						<img class = "icons" src="Imagens/add.png" alt="add"><div id="amount-box"> <p>2</p></div><img class = "icons"src="Imagens/minus-sign.png" alt="remove">
+					<div class="quantity-input">
+						<button class="minus-btn">-</button>
+						<input type="number" name="quantity" min="1" max="10" value="1" class="box-quantity">
+						<button class="plus-btn">+</button>
 					</div>
 					<a class ="button" id="button-finaly"  href="">Comprar</a>
 				</div>
