correção de propoção de img

--- a/signIn.html
+++ b/signIn.html
@@ -16,16 +16,17 @@
 		</div>
 		<main class="main-content">
 			<h1>Create account</h1>
-			<form action="" class="loginFields">
-				<input type="text" id="Nome-Completo" placeholder="Nome Completo" >
+			<form action="" class="loginFields" >
+				<input type="text" id="full-name" placeholder="Nome Completo" >
 				<input type="text" id="email" placeholder="E-mail" >
-				<input type="password" id="passworsd" placeholder="Senha" >
+				<input type="password" id="password" placeholder="Senha" >
 				<div>
 					<input class="button" type="submit" value="Sign-in" >
-					<a href="index.html"><input class="button" type="submit" value="Login-in" ></a>
+					<input class="button" type="submit" value="Login-in" >
 				</div>
 			</form>
 		</main>
 	</div>
+	<script src="JS/main.js"></script>
 </body>	
 </html>
