Correção de erros

--- a/product.html
+++ b/product.html
@@ -65,6 +65,7 @@
 						<p><img class = "icons" src="Imagens/credit-card.png" alt="cartao" >até 4x de 174,72</p>
 						<a href="">mais formas de pagamento</a>
 					</div>
+					<p class="endereco"><img src="/Imagens/map.png" alt=""> Av. Doroteu Nerez - Paraibinha </p>
 					<div class="freight">
 						<div class="freight-category">
 							<div>
