--- a/signIn.html
+++ b/signIn.html
@@ -11,8 +11,7 @@
 	<div class="contaner-register">
 		<div class="content-sucundary">
 			<img class="logo" src="Imagens/Logo.png" alt="">
-			<h1>Welcome Materialize</h1>
-			<p>Um site que prioriza praticidade de compra dos melhores materiais escolares.</p>
+			
 		</div>
 		<main class="main-content">
 			<h1>Create account</h1>
@@ -22,7 +21,7 @@
 				<input type="password" id="password" placeholder="Senha" >
 				<div>
 					<input class="button" type="submit" value="Sign-in" >
-					<input class="button" type="submit" value="Login-in" >
+					<input class="button" type="submit" value="Login" >
 				</div>
 			</form>
 		</main>
