--- a/index.html
+++ b/index.html
@@ -80,7 +80,32 @@
 					<p class="name-produt">Caderno</p>
 					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
 					<a class="button" href="product.html" >Compra</a>	
-				</div> 
+				</div>
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="product.html" >Compra</a>	
+				</div>
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="product.html" >Compra</a>	
+				</div>
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="product.html" >Compra</a>	
+				</div>
+				<div class="card">
+					<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
+					<p class="name-produt">Caderno</p>
+					<span class="price">R$ 9,99 <del>R$ 25,00</del></span>
+					<a class="button" href="product.html" >Compra</a>	
+				</div>
+				 
 			</div>
 		</main> 
 		<footer class="rodape">
