atualizando o valor do caderno

--- a/product.html
+++ b/product.html
@@ -42,11 +42,11 @@
 			<div class="root">
 				<div class="product-card">
 					<div class="product-preview">
-						<img src="https://m.media-amazon.com/images/I/61XXfR9v-fL._AC_UL320_.jpg" alt="">
+						<img src="https://a-static.mlcdn.com.br/800x560/caderno-universitario-flork-1-materia-jandaia/costaatacado/1031219/629f6b85f6dd8f3377fccbdc29f6c83e.jpeg" alt="">
 
 					</div>
 					<div class="descricao-product">
-						<h1 class="basic-Product-information">Smartphone Samsung Galaxy A03 Core 32GB 4G Wi-Fi Tela 6.5'' Dual Chip 2GB RAM Câmera 8MP + Selfie 5MP - Verde</h1>
+						<h1 class="basic-Product-information">Caderno Van Gogh "Amendoeira" Capa Dura e Toque Aveludado, 125 Folhas, 21x15cm</h1>
 						<div class="assessment">
 							<img src="Imagens/star.png" alt="stars1">
 							<img src="Imagens/star.png" alt="stars2">
@@ -59,7 +59,7 @@
 					</div>
 				</div>
 				<div class="payment-card">
-					<h1 class="price">R$ 698,90</h1>
+					<h1 class="price">R$ 68,90</h1>
 				
 					<div class="payment-methods">
 						<p><img class = "icons" src="Imagens/credit-card.png" alt="cartao" >até 4x de 174,72</p>
